<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Parcial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtPorcentaje"
        android:layout_width="186dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTreinta" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/Calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnQuince"
        android:layout_width="77dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/quince"
        app:layout_constraintStart_toEndOf="@+id/btnCinco"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnTreinta"
        android:layout_width="77dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/treinta"
        app:layout_constraintStart_toEndOf="@+id/btnQuince"
        app:layout_constraintTop_toBottomOf="@+id/txtActual" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/Porcentaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />

    <EditText
        android:id="@+id/txtTotal"
        android:layout_width="137dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/txtActual"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="92dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/Total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/man1"
        android:layout_width="42dp"
        android:layout_height="37dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="251dp"
        android:layout_height="170dp"
        android:layout_marginTop="72dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manzana"
        tools:srcCompat="@drawable/manzana" />

    <ImageView
        android:id="@+id/man2"
        android:layout_width="42dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/man1"
        app:srcCompat="@drawable/apple" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/Actual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="77dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/cinco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnCincuenta"
        android:layout_width="77dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/cincuenta"
        app:layout_constraintStart_toEndOf="@+id/btnTreinta"
        app:layout_constraintTop_toBottomOf="@+id/txtActual" />

</androidx.constraintlayout.widget.ConstraintLayout>